# backend-template-fastapi

./: .gitignore  alembic.ini  docker-compose.dev.yml  pyproject.toml
configs/: db.py  settings.py
db/migrations/: env.py
db/models/: __init__.py  user.py
