[tool.poetry]
name = "backend-template"
version = "0.1.0"
description = ""
authors = ["Michael <mjthecoder53161@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.12"}
alembic = "^1.15.2"
sqlmodel = "^0.0.24"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
